--- a/ProjectTasksApi/Properties/launchSettings.json
+++ b/ProjectTasksApi/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "backend": {
+    "ProjectTasksApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
