Backend: Deployed to Azure and used KeyVault to store the DB connection string

--- a/ProjectTasksApi/appsettings.Development.json
+++ b/ProjectTasksApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AppKeyVault": {
+    "Endpoint": "https://project-tasks-kv.vault.azure.net/"
   }
 }
