--- a/ProjectTasksApi/appsettings.json
+++ b/ProjectTasksApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppKeyVault": {
+    "Endpoint": "https://project-tasks-kv.vault.azure.net/"
+  }
 }
