Cosmos: Implement Cosmos API

--- a/ProjectTasksCosmosApi/appsettings.Development.json
+++ b/ProjectTasksCosmosApi/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AppKeyVault": {
+    "Endpoint": "https://project-tasks-cosmos-kv.vault.azure.net/"
+  },
+  "DatabaseName": "ProjectTasksDb"
 }
