--- a/ProjectTasksCosmosApi/appsettings.json
+++ b/ProjectTasksCosmosApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppKeyVault": {
+    "Endpoint": "https://project-tasks-cosmos-kv.vault.azure.net/"
+  },
+  "DatabaseName": "ProjectTasksDb"
 }
