--- a/.github/workflows/ProjectTasksCosmosApiLinuxAppService.yml
+++ b/.github/workflows/ProjectTasksCosmosApiLinuxAppService.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - ProjectTaskCosmosApi/**
+      - ProjectTasksCosmosApi/**
       - .github/workflows/ProjectTasksCosmosApiLinuxAppService.yml
 env:
   AZURE_WEBAPP_NAME: ProjectTasksCosmosApiLinuxAppService
