--- a/.github/workflows/ProjectTasksApiLinuxAppService.yml
+++ b/.github/workflows/ProjectTasksApiLinuxAppService.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Azure login
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        creds: ${{ secrets.AZURE_API_DEPLOYMENT_CREDENTIALS }}
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
