--- a/ProjectTasksFrontend/package.json
+++ b/ProjectTasksFrontend/package.json
@@ -4,7 +4,8 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build",
+        "build": "ng build --configuration production",
+        "build:cosmos": "ng build --configuration production-cosmos",
         "watch": "ng build --watch --configuration development",
         "test": "ng test"
     },
