--- a/.github/workflows/main_projecttaskspopulatecosmosdbfunction.yml
+++ b/.github/workflows/main_projecttaskspopulatecosmosdbfunction.yml
@@ -1,16 +1,16 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy dotnet core project to Azure Function App - ProjectTasksPopulateCosmosDbFunction
+name: Build and deploy Azure Function App - ProjectTasksPopulateCosmosDbFunction
 
 on:
   push:
     branches:
       - main
+    paths:
+      - ProjectTasksFunction/**
+      - .github/workflows/main_projecttaskspopulatecosmosdbfunction.yml
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: './ProjectTasksFunction' # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '6.0.x' # set this to the dotnet version to use
 
 jobs:
