--- a/.github/workflows/ProjectTasksPopulateCosmosDbFunction.yml
+++ b/.github/workflows/ProjectTasksPopulateCosmosDbFunction.yml
@@ -12,7 +12,7 @@ env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: ./published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
-  WORKING_DIRECTORY: .
+  WORKING_DIRECTORY: ./ProjectTasksFunction
 
 jobs:
   build:
