--- a/.github/workflows/ProjectTasksPopulateCosmosDbFunction.yml
+++ b/.github/workflows/ProjectTasksPopulateCosmosDbFunction.yml
@@ -43,6 +43,10 @@ jobs:
       with:
         name: functionapp
         path: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+    - name: Azure login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_API_DEPLOYMENT_CREDENTIALS }}
     - name: Deploy to Azure Function App
       uses: Azure/functions-action@v1
       with:
