Backend: Implemented API Auth using AAD

--- a/ProjectTasksApi/appsettings.Development.json
+++ b/ProjectTasksApi/appsettings.Development.json
@@ -1,4 +1,13 @@
 {
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "qualified.domain.name",
+    "ClientId": "431ea18b-eaeb-45c3-8351-5c770d777933",
+    "TenantId": "common"
+  },
+  "AppAuth": {
+    "PermissionsScope": "access_as_user"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
